// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action Creator: Password resetPassword handles error 1`] = `
Array [
  Array [
    Object {
      "type": "RESET_PASSWORD_PENDING",
    },
  ],
  Array [
    Object {
      "payload": "error",
      "type": "RESET_PASSWORD_ERROR",
    },
  ],
]
`;

exports[`Action Creator: Password resetPassword handles success 1`] = `
Array [
  Array [
    Object {
      "type": "RESET_PASSWORD_PENDING",
    },
  ],
  Array [
    Object {
      "type": "RESET_PASSWORD_SUCCESS",
    },
  ],
]
`;

exports[`Action Creator: Password sendPasswordResetEmail handles error 1`] = `
Array [
  Array [
    Object {
      "type": "SEND_PASSWORD_EMAIL_PENDING",
    },
  ],
  Array [
    Object {
      "payload": "error",
      "type": "SEND_PASSWORD_EMAIL_ERROR",
    },
  ],
]
`;

exports[`Action Creator: Password sendPasswordResetEmail sends with email 1`] = `
Array [
  Array [
    Object {
      "type": "SEND_PASSWORD_EMAIL_PENDING",
    },
  ],
  Array [
    Object {
      "type": "SEND_PASSWORD_EMAIL_SUCCESS",
    },
  ],
]
`;

exports[`Action Creator: Password sendPasswordResetEmail sends with username 1`] = `
Array [
  Array [
    Object {
      "type": "SEND_PASSWORD_EMAIL_PENDING",
    },
  ],
  Array [
    Object {
      "type": "SEND_PASSWORD_EMAIL_SUCCESS",
    },
  ],
]
`;
